--- a/examples/demo/docker-compose.yaml
+++ b/examples/demo/docker-compose.yaml
@@ -9,11 +9,11 @@ services:
       - "14268"
       - "14250"
 
-  # Zipkin
-  zipkin-all-in-one:
-    image: openzipkin/zipkin:latest
-    ports:
-      - "9411:9411"
+  # # Zipkin
+  # zipkin-all-in-one:
+  #   image: openzipkin/zipkin:latest
+  #   ports:
+  #     - "9411:9411"
 
   # Collector
   otel-collector:
@@ -30,7 +30,7 @@ services:
       - "55679:55679" # zpages extension
     depends_on:
       - jaeger-all-in-one
-      - zipkin-all-in-one
+      # - zipkin-all-in-one
 
   demo-client:
     build:
